docs/version-1.9/modules/en/pages/installation-setup/installation/rancher-windows-cluster.adoc
= Rancher Windows Cluster
:current-version: {page-component-version}

Rancher can provision a Windows cluster with combination of Linux worker nodes and Windows worker nodes.
For more information on the Rancher Windows cluster, see the official https://documentation.suse.com/cloudnative/rancher-manager/latest/en/cluster-deployment/custom-clusters/windows/use-windows-clusters.html[Rancher documentation].

In a Rancher Windows cluster, all Linux worker nodes are:

* Tainted with the taint `cattle.io/os=linux:NoSchedule`
* Labeled with `kubernetes.io/os:linux`

[NOTE]
====
After {longhorn-product-name} is deployed, you can launch workloads that use {longhorn-product-name} volumes only on Linux nodes.
====

== Deploy {longhorn-product-name} With Supported Helm Chart

You can update the Helm value `global.cattle.windowsCluster.enabled` to allow {longhorn-product-name} installation on the Rancher Windows cluster.

When this value is set to `true`, {longhorn-product-name} will recognize the Rancher Windows cluster then deploy {longhorn-product-name} components with the correct node selector and tolerations so that all {longhorn-product-name} workloads can be launched on Linux nodes only.

On the Rancher marketplace, the setting can be customized in `customize Helm options` before installation: +
`Edit Options` > `Other Settings` > `Rancher Windows Cluster`

Also in: +
`Edit YAML`

----
global:
  cattle:
    systemDefaultRegistry: ""
    windowsCluster:
      # Enable this to allow Longhorn to run on the Rancher deployed Windows cluster
      enabled: true
----

== Set Up {longhorn-product-name} Components For Existing {longhorn-product-name} Deployment

You can set up the existing {longhorn-product-name} when its not deployed with the supported Helm chart.

* Since {longhorn-product-name} components can only run on Linux nodes, you need to set the node selector `kubernetes.io/os:linux` for {longhorn-product-name} to select the Linux nodes. For more information, see xref:nodes/node-selector.adoc[Node Selector].
+
* Since all Linux worker nodes in a Rancher Windows cluster have the taint `cattle.io/os=linux:NoSchedule`, you must set the toleration `cattle.io/os=linux:NoSchedule` to allow {longhorn-product-name} to run on those nodes. For more information, see xref:nodes/taints-tolerations.adoc[Taint Toleration].



[NOTE]
====
{longhorn-product-name} can be effectively deployed on clusters comprising both Windows and Linux nodes, offering a versatile solution for diverse infrastructure needs. To facilitate installation from Rancher, users should first add the AppCo OCI registry as a Rancher App Repository. Detailed instructions for this process can be found at https://docs.apps.rancher.io/howto-guides/integrate-with-rancher-manager/[Rancher Documentation: Integrate with Rancher Manager]
====